<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	android:layout_height="match_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	>
<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="center_horizontal"
	android:layout_marginTop="150dp"
	app:columnCount="1"
	app:rowCount="3">

	<TextView
		android:id="@+id/set_prices"
		android:layout_width="match_parent"
		android:layout_height="33dp"
		android:gravity="left"
		android:text="@string/set_price"
		android:textAppearance="@style/title"
		android:textStyle="bold" />

	<ImageView
		android:layout_width="300dp"
		android:layout_height="1dp"
		android:background="@drawable/line_separator"
		app:layout_gravity="center"
		android:layout_marginTop="16dp"
		app:layout_rowWeight="1" />

	<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:id="@+id/title"
		android:layout_width="293dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="28dp"
		app:layout_gravity="center_horizontal"
		app:columnCount="2"
		app:rowCount="1">

		<TextView
			android:id="@+id/course_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:text="@string/course"
			android:textAppearance="@style/label_text"
			android:textStyle="bold"
			app:layout_columnWeight="1" />

		<TextView
			android:id="@+id/course_rate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:layout_marginRight="35dp"
			android:text="@string/course_rate"
			android:textAppearance="@style/label_text"
			android:textStyle="bold"
			app:layout_columnWeight="1" />
	</androidx.gridlayout.widget.GridLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/course_rate_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:gravity="center_horizontal"
		tools:context=".activities.CourseRatesActivity">
	</LinearLayout>

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/next_button"
		android:text="@string/next"
		style="@style/NextButton"
		app:layout_gravity="center_horizontal"/>
</androidx.gridlayout.widget.GridLayout>

</ScrollView>