<?xml version="1.0" encoding="utf-8"?>
<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="32dp"
    app:columnCount="1"
    app:rowCount="5">

    <TextView
        android:id="@+id/manual_set_title"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:text="@string/manual_set"
        android:textAppearance="@style/title"
        android:textStyle="bold"
        app:layout_rowWeight="1"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="@drawable/line_separator"
        android:layout_marginTop="16dp"
        app:layout_rowWeight="1" />

    <androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:columnCount="7"
        app:rowCount="1">

        <com.example.edumatch.views.DayOfTheWeekView
            android:id="@+id/sunday_button"
            app:DayString="S"
            app:Day="Sunday"
            style="@style/DayOfTheWeekButtonStyle"
            app:layout_columnWeight="1"/>
        <com.example.edumatch.views.DayOfTheWeekView
            android:id="@+id/monday_button"
            app:DayString="M"
            app:Day="Monday"
            style="@style/DayOfTheWeekButtonStyle"
            app:layout_columnWeight="1"/>
        <com.example.edumatch.views.DayOfTheWeekView
            android:id="@+id/tuesday_button"
            app:DayString="T"
            app:Day="Tuesday"
            style="@style/DayOfTheWeekButtonStyle"
            app:layout_columnWeight="1"/>
        <com.example.edumatch.views.DayOfTheWeekView
            android:id="@+id/wednesday_button"
            app:DayString="W"
            app:Day="Wednesday"
            style="@style/DayOfTheWeekButtonStyle"
            app:layout_columnWeight="1"/>
        <com.example.edumatch.views.DayOfTheWeekView
            android:id="@+id/thursday_button"
            app:DayString="T"
            app:Day="Thursday"
            style="@style/DayOfTheWeekButtonStyle"
            app:layout_columnWeight="1"/>
        <com.example.edumatch.views.DayOfTheWeekView
            android:id="@+id/friday_button"
            app:DayString="F"
            app:Day="Friday"
            style="@style/DayOfTheWeekButtonStyle"
            app:layout_columnWeight="1"/>
        <com.example.edumatch.views.DayOfTheWeekView
            android:id="@+id/saturday_button"
            app:DayString="S"
            app:Day="Saturday"
            style="@style/DayOfTheWeekButtonStyle"
            app:layout_columnWeight="1"/>


    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/selected_day"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:text="@string/select_availability_day"
        android:textAppearance="@style/title"
        android:textStyle="bold"
        app:layout_rowWeight="1"
        android:layout_marginTop="16dp"/>
<com.example.edumatch.views.AvailableTimesViews
    android:id="@+id/available_times"
    android:visibility="gone"
   />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/manually_set_button"
        android:layout_width="147.5dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/sign_up_btn"
        android:text="@string/manually_set_availability_button"
        android:textAppearance="@style/black_button_text"
        app:layout_rowWeight="1"
        app:layout_gravity="center" />

    <TextView
        android:id="@+id/automatically_set_title"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:text="@string/google_calendar_set"
        android:textAppearance="@style/title"
        android:textStyle="bold"
        app:layout_rowWeight="1"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="@drawable/line_separator"
        android:layout_marginTop="16dp"
        app:layout_rowWeight="1" />
    <ImageView
        android:background="@drawable/devicon_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        app:layout_rowWeight="1"
        app:layout_gravity="center"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/automatically_set_button"
        android:layout_width="147.5dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/sign_up_btn"
        android:text="@string/googlesignintext"
        android:textAppearance="@style/black_button_text"
        app:layout_rowWeight="1"
        app:layout_gravity="center" />
</androidx.gridlayout.widget.GridLayout>